<resources>
    <string name="app_name">IntentMokha</string>
    <string name="move_activity">PINDAH ACTIVITY</string>
    <string name="move_with_data">PINDAH ACTIVITY DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH ACTIVITY DENGAN RESULT</string>
    <string name="result_from_activity">HASIL DARI ACTIVITY</string>
    <string name="choose_color">PILIH WARNA YANG KAMU SUKA</string>
    <string name="_blue">BIRU</string>
    <string name="_yellow">KUNING</string>
    <string name="_red">MERAH</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH ACTIVITY</string>
    <string name="_stop">BERHENTI</string>
    <string name="_wait">HATI-HATI</string>
    <string name="_go">JALAN</string>
    <string name="choose_lamp">PILIH SALAH SATU RAMBU</string>
</resources>