<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveForResultActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/mokalone"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hasil Dari Activity"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/text_view"
        android:background="#869fdb"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_lamp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_below="@id/text_view"
        android:id="@+id/text_view2"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_color"
        android:orientation="vertical"
        android:layout_below="@id/text_view2">
        <RadioButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/rb_stop"
            android:text="@string/_stop"
            android:textColor="@color/red"
            android:button="@drawable/ic_baseline_directions_walk_48"
            android:background="@color/red"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <RadioButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/rb_wait"
            android:text="@string/_wait"
            android:textColor="@color/yellow"
            android:button="@drawable/ic_baseline_directions_run_48"
            android:background="@color/yellow"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <RadioButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/rb_go"
            android:text="@string/_go"
            android:background="@color/green"
            android:button="@drawable/ic_baseline_directions_bike_48"
            android:textColor="@color/green"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_choose"
        android:text="@string/choose"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"/>
  </RelativeLayout>